fixed bugs in web API